add the links to the tingle javascript and tingle style sheet

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
+<!-- Add you html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Add a link to your own style.css -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Add the link with your own path for tingle.min.css normaly inside of node_modules -->
+    <link rel="stylesheet" href="node_modules/tingle.js/dist/tingle.min.css" />
     <title>Modal</title>
   </head>
   <body>
+    <!-- Connect with the tingle.min.js that is noramly inside of node_modules. Check your own path to the file -->
+    <script src="node_modules/tingle.js/dist/tingle.min.js"></script>
+    <!-- Connect with your own javascript -->
     <script src="index.js"></script>
   </body>
 </html>
