add a button and template on index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
     <title>Modal</title>
   </head>
   <body>
+    <!-- create a button to open the modal form the html -->
+    <button class="btn">open modal</button>
+    <!-- create a template to add more content inside of the modal -->
+    <template>
+      <h1>This is a Modal</h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus error
+        maiores, non harum expedita velit saepe exercitationem, quae magni
+        assumenda suscipit. Sed, facere! Similique ex reprehenderit et aliquam!
+        Aut, eos.
+      </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus error
+        maiores, non harum expedita velit saepe exercitationem, quae magni
+        assumenda suscipit. Sed, facere! Similique ex reprehenderit et aliquam!
+        Aut, eos.
+      </p>
+    </template>
     <!-- Connect with the tingle.min.js that is noramly inside of node_modules. Check your own path to the file -->
     <script src="node_modules/tingle.js/dist/tingle.min.js"></script>
     <!-- Connect with your own javascript -->
